creating the develop branch

--- a/Introduccion.html
+++ b/Introduccion.html
@@ -7,9 +7,13 @@
 <body>
     <h1>Sitio web práctica</h1>
     <!-- Aquí se agrega el script para trabajar javascript-->
-    <script>
-        alert("Guille Alert");
-    </script>
+    <!-- Ejemplo
+        <script>
+            alert("Guille Alert");
+        </script>
+    -->
+    <!-- Para llamar a otro archivo (archivo externo) se pone el nombre del archivo en el atributo SRC. Ejemplo-->
+    <script src="introduccion.js"> </script>   
 </body>
 </html>
 </html>
