--- a/Introduccion.html
+++ b/Introduccion.html
@@ -18,7 +18,6 @@
         
     </form>
     
-    <script src="introduccion.js"></script>   
+    <script src="js/introduccion.js"></script> 
 </body>
-</html>
 </html>
